--- a/templates/fitness.html
+++ b/templates/fitness.html
@@ -7,6 +7,7 @@
 
     <title>Fitness tracker</title>
 
+    {#extra fonts#}
     <style type="text/css">
         @import url('//fonts.googleapis.com/css?family=Lato:400');
         @import url('//fonts.googleapis.com/css?family=Lusitana:400,700');
@@ -14,8 +15,10 @@
 
 </head>
 
+{#external css link#}
 <link rel="stylesheet" href="{{ url_for('static', filename='fitness_bootstrap.css') }}">
 
+{#internal css#}
 <style>
     .marginTB__ {
         margin-top: 30px;
@@ -45,60 +48,66 @@
 </style>
 
 <script>
-function recordbreakfast() {
-    let i;
-    let breakfastfoodlist = [];
-    let gramls = [];
-    for(i=0; i < 1; i++) {
-        breakfastfoodlist.push(prompt("Enter food:"));
-        gramls.push(prompt("Enter amount of " + breakfastfoodlist[i] + " in gram:"));
-        document.getElementById('listadd1').innerHTML += "<li>" + "Food:" + breakfastfoodlist[i] + "<br />" + "Gram:" + gramls[i] + "<br />";
-}}
+    function recordbreakfast() {
+        let i;
+        let breakfastfoodlist = [];
+        let gramls = [];
+        for (i = 0; i < 1; i++) {
+            breakfastfoodlist.push(prompt("Enter food:"));
+            gramls.push(prompt("Enter amount of " + breakfastfoodlist[i] + " in gram:"));
+            document.getElementById('listadd1').innerHTML += "<li>" + "Food:" + breakfastfoodlist[i] + "<br />" + "Gram:" + gramls[i] + "<br />";
+        }
+    }
 
-function recordlunch() {
-    let i;
-    let lunchfoodlist = [];
-    let gramls = [];
-    for(i=0; i < 1; i++) {
-        lunchfoodlist.push(prompt("Enter food:"));
-        gramls.push(prompt("Enter amount of " + lunchfoodlist[i] + " in gram:"));
-        document.getElementById('listadd2').innerHTML += "<li>" + "Food:" + lunchfoodlist[i] + "<br />" + "Gram:" + gramls[i] + "<br />";
-}}
+    function recordlunch() {
+        let i;
+        let lunchfoodlist = [];
+        let gramls = [];
+        for (i = 0; i < 1; i++) {
+            lunchfoodlist.push(prompt("Enter food:"));
+            gramls.push(prompt("Enter amount of " + lunchfoodlist[i] + " in gram:"));
+            document.getElementById('listadd2').innerHTML += "<li>" + "Food:" + lunchfoodlist[i] + "<br />" + "Gram:" + gramls[i] + "<br />";
+        }
+    }
 
-function recorddinner() {
-    let i;
-    let dinnerfoodlist = [];
-    let gramls = [];
-    for(i=0; i < 1; i++) {
-        dinnerfoodlist.push(prompt("Enter food:"));
-        gramls.push(prompt("Enter amount of " + dinnerfoodlist[i] + " in gram:"));
-        document.getElementById('listadd3').innerHTML += "<li>" + "Food:" + dinnerfoodlist[i] + "<br />" + "Gram:" + gramls[i] + "<br />";
-}}
+    function recorddinner() {
+        let i;
+        let dinnerfoodlist = [];
+        let gramls = [];
+        for (i = 0; i < 1; i++) {
+            dinnerfoodlist.push(prompt("Enter food:"));
+            gramls.push(prompt("Enter amount of " + dinnerfoodlist[i] + " in gram:"));
+            document.getElementById('listadd3').innerHTML += "<li>" + "Food:" + dinnerfoodlist[i] + "<br />" + "Gram:" + gramls[i] + "<br />";
+        }
+    }
 
-function recordsnacks() {
-    let i;
-    let snacksfoodlist = [];
-    let gramls = [];
-    for(i=0; i < 1; i++) {
-        snacksfoodlist.push(prompt("Enter food:"));
-        gramls.push(prompt("Enter amount of " + snacksfoodlist[i] + " in gram:"));
-        document.getElementById('listadd4').innerHTML += "<li>" + "Food:" + snacksfoodlist[i] + "<br />" + "Gram:" + gramls[i] + "<br />";
-}}
+    function recordsnacks() {
+        let i;
+        let snacksfoodlist = [];
+        let gramls = [];
+        for (i = 0; i < 1; i++) {
+            snacksfoodlist.push(prompt("Enter food:"));
+            gramls.push(prompt("Enter amount of " + snacksfoodlist[i] + " in gram:"));
+            document.getElementById('listadd4').innerHTML += "<li>" + "Food:" + snacksfoodlist[i] + "<br />" + "Gram:" + gramls[i] + "<br />";
+        }
+    }
 
-function recordexercise() {
-    let i;
-    let exerciselist = [];
-    let gramls = [];
-    for(i=0; i < 1; i++) {
-        exerciselist.push(prompt("Enter exercise:"));
-        document.getElementById('listadd5').innerHTML += "<li>" + "Exercise:" + exerciselist[i] + "<br />";
-}}
+    function recordexercise() {
+        let i;
+        let exerciselist = [];
+        let gramls = [];
+        for (i = 0; i < 1; i++) {
+            exerciselist.push(prompt("Enter exercise:"));
+            document.getElementById('listadd5').innerHTML += "<li>" + "Exercise:" + exerciselist[i] + "<br />";
+        }
+    }
 
 </script>
 
+{#python navbar#}
 <div>
 
-    {% include 'includes/navbar.html' %}
+    {% include 'includes/_navbar.html' %}
 
 </div>
 
@@ -106,6 +115,7 @@ function recordexercise() {
 <h3 style="color:rgba(105, 205, 60, 1); font-size:50px;" class="text-center headers bg-dark">
     Fitness tracker</h3>
 
+{#nutritionplan subjected to user info#}
 <div id="toppartoffit">
     <div id="wrapper">
         <div class="marginTB__ ">
@@ -216,9 +226,10 @@ function recordexercise() {
                 <ul id="listadd2">
                 </ul>
                 <p></p></div>
+            <!--Buttons to add meal and exercises-->
             <button type="button"
                     class="btn btn-success"
-            onclick="recordlunch()">
+                    onclick="recordlunch()">
                 Add your meal
             </button>
         </div>
@@ -230,9 +241,10 @@ function recordexercise() {
                 <ul id="listadd3">
                 </ul>
                 <p></p></div>
+            <!--Buttons to add meal and exercises-->
             <button type="button"
                     class="btn btn-success"
-            onclick="recorddinner()">
+                    onclick="recorddinner()">
                 Add your meal
             </button>
         </div>
@@ -244,9 +256,10 @@ function recordexercise() {
                 <ul id="listadd4">
                 </ul>
                 <p></p></div>
+            <!--Buttons to add meal and exercises-->
             <button type="button"
                     class="btn btn-success"
-            onclick="recordsnacks()">
+                    onclick="recordsnacks()">
                 Add your meal
             </button>
         </div>
@@ -258,9 +271,10 @@ function recordexercise() {
                 <ul id="listadd5">
                 </ul>
                 <p></p></div>
+            <!--Buttons to add meal and exercises-->
             <button type="button"
                     class="btn btn-danger"
-            onclick="recordexercise()">
+                    onclick="recordexercise()">
                 Add your exercise
             </button>
         </div>
