--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 </head>
 <body>
-    {% include 'includes/navbar.html' %}
+    {% include 'includes/_navbar.html' %}
     {% include 'includes/messages.html' %}
     {% block body %}{% endblock %}
 
