--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -10,9 +10,17 @@
         {
             height:50px!important;
         }
+
+        .nav-link{
+            font-size: 17px;
+        }
+
+        ul.navbar-nav a:hover {
+            color: greenyellow !important;
+        }
     </style>
 
-<nav class="navbar navbar-expand-sm bg-light justify-content-center">
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-center">
     <ul class="navbar-nav">
     <li class="nav-item">
       <a class="nav-link" href="/home">Home</a>
@@ -25,7 +33,7 @@
       <a class="nav-link" href="/schedule">Schedule</a>
     </li>
       <li class="nav-item">
-      <a class="nav-link" href="fitness">Fitness Tracker</a>
+      <a class="nav-link" href="/fitness">Fitness Tracker</a>
     </li>
       <li class="nav-item">
       <a class="nav-link" href="/HealthTracker">Health Tracker</a>
